--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -7,47 +7,21 @@
     <li><a class="black-text">Categories</a></li>
     <li><a href="users" class="black-text">Users</a></li>
     <li><a href="blacklist" class="black-text">Blacklist Users</a></li>
-    <li><a href="# "onclick="window.location.href = decodeURIComponent('/?sign=out')" class="blue-text">Sign Out</a></li>
+    <li><a href="# " onclick="window.location.href = decodeURIComponent('/?sign=out')" class="blue-text">Sign Out</a>
+    </li>
 </ul>
 <div class="center" style="margin: 20px 20px;">
-        <div class="row col s12" style="margin-top: -7px">
-            <div class="center">
-                <h3>Statistics</h3>
-            </div>
-            <div class="row">
-                <div class="col s12 m6">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="card-title">Users</span>
-                            <div id="piechart" style="height: 166.19px">
-                                <div class="center">
-                                    <div class="preloader-wrapper big active">
-                                        <div class="spinner-layer spinner-blue white">
-                                            <div class="circle-clipper left">
-                                                <div class="circle"></div>
-                                            </div>
-                                            <div class="gap-patch">
-                                                <div class="circle"></div>
-                                            </div>
-                                            <div class="circle-clipper right">
-                                                <div class="circle"></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-action center" style="margin-top: 10px">
-                                <a href="users" class="blue-text btn-flat waves-effect waves-light">Users</a>
-                                <a href="blacklist" class="blue-text btn-flat waves-effect waves-light">Manage Users</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m6">
-                    <div class="card">
-                        <div class="card-content">
-                            <span class="card-title">Statistics</span>
-                            <div class="center" id="preloader">
+    <div class="row col s12" style="margin-top: -7px">
+        <div class="center">
+            <h3>Statistics</h3>
+        </div>
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">Users</span>
+                        <div id="piechart" style="height: 166.19px">
+                            <div class="center">
                                 <div class="preloader-wrapper big active">
                                     <div class="spinner-layer spinner-blue white">
                                         <div class="circle-clipper left">
@@ -62,21 +36,53 @@
                                     </div>
                                 </div>
                             </div>
-                            <h5 id="item-count"></h5>
-                            <h5 id="category-count"></h5>
-                            <h5 id="user-count"></h5>
-                            <h5 id="order-count"></h5>
-                            <div class="card-action center" style="margin-top: 10px">
-                                <a href="items" class="blue-text btn-flat waves-effect waves-light">View Items</a>
-                                <a href="categories" class="blue-text btn-flat waves-effect waves-light">View
-                                    Categories</a>
-                                <a href="users" class="blue-text btn-flat waves-effect waves-light">Users</a>
+                        </div>
+                        <div class="card-action center" style="margin-top: 10px">
+                            <a href="users" class="blue-text btn-flat waves-effect waves-light">Users</a>
+                            <a href="blacklist" class="blue-text btn-flat waves-effect waves-light">Manage Users</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">Statistics</span>
+                        <div class="center" id="preloader">
+                            <div class="preloader-wrapper big active">
+                                <div class="spinner-layer spinner-blue white">
+                                    <div class="circle-clipper left">
+                                        <div class="circle"></div>
+                                    </div>
+                                    <div class="gap-patch">
+                                        <div class="circle"></div>
+                                    </div>
+                                    <div class="circle-clipper right">
+                                        <div class="circle"></div>
+                                    </div>
+                                </div>
                             </div>
+                        </div>
+                        <h5 id="item-count"></h5>
+                        <h5 id="category-count"></h5>
+                        <h5 id="user-count"></h5>
+                        <h5 id="order-count"></h5>
+                        <div class="card-action center" style="margin-top: 10px">
+                            <a href="items" class="blue-text btn-flat waves-effect waves-light">View Items</a>
+                            <a href="categories" class="blue-text btn-flat waves-effect waves-light">View
+                                Categories</a>
+                            <a href="revenue" class="blue-text btn-flat waves-effect waves-light">Revenue</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row col s12">
+        <div class="center">
+            <a class="btn-large btn green" target="_blank" href="https://calendar.google.com/calendar?cid=ajYydTFldWE3bzZlYjBia2ZrdmE3aW02cWtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Delivery Calendar</a>
+        </div>
+    </div>
 </div>
 
 <script>
@@ -85,11 +91,12 @@
             categories = await getCategories();
             items = await getItems();
             users = await getUsers();
+            orders = await getOrders();
             $('#preloader').hide();
             $('#item-count').html('Item Count: ' + items.length);
             $('#category-count').html('Category Count: ' + categories.length);
             $('#user-count').html('User Count: ' + users.length);
-            $('#order-count').html('Order Count: ' + 'null');
+            $('#order-count').html('Order Count: ' + orders.length);
         } catch (e) {
             console.log(e);
         }
