--- a/views/index.hbs
+++ b/views/index.hbs
@@ -65,7 +65,7 @@
             <h2 class="header hide-on-med-and-up">Custom Groceries</h2>
             <div class="row">
                 <div class="col s12 m3">
-                    <div class="card grey lighten-3" style="display: inline-block">
+                    <div class="card grey lighten-3 hoverable" style="display: inline-block">
                         <div class="card-content">
                             <span class="card-title">Orange Chicken</span>
                         </div>
